--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,23 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.antlr-2.7.7.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\antlr-2.7.7.jar
-file.reference.cdi-api-1.1.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\cdi-api-1.1.jar
-file.reference.classmate-1.3.0.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\classmate-1.3.0.jar
-file.reference.dom4j-1.6.1.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\dom4j-1.6.1.jar
-file.reference.el-api-2.2.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\el-api-2.2.jar
-file.reference.geronimo-jta_1.1_spec-1.1.1.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\geronimo-jta_1.1_spec-1.1.1.jar
-file.reference.hibernate-commons-annotations-5.0.1.Final.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\hibernate-commons-annotations-5.0.1.Final.jar
-file.reference.hibernate-core-5.2.2.Final.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\hibernate-core-5.2.2.Final.jar
-file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\hibernate-jpa-2.1-api-1.0.0.Final.jar
-file.reference.jandex-2.0.0.Final.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\jandex-2.0.0.Final.jar
-file.reference.javassist-3.20.0-GA.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\javassist-3.20.0-GA.jar
-file.reference.javax.inject-1.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\javax.inject-1.jar
-file.reference.jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar
-file.reference.jboss-logging-3.3.0.Final.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\jboss-logging-3.3.0.Final.jar
-file.reference.jsr250-api-1.0.jar=..\\..\\hibernate-release-5.2.2.Final\\lib\\required\\jsr250-api-1.0.jar
-file.reference.mysql-connector-java-5.1.39-bin.jar=..\\..\\mysql-connector-java-5.1.39-bin.jar
-file.reference.primefaces-6.0.jar=..\\..\\..\\Downloads\\primefaces-6.0.jar
+file.reference.primefaces-6.0.jar-1=C:\\Users\\samue\\Downloads\\primefaces-6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -58,24 +42,8 @@ javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.primefaces-6.0.jar}:\
-    ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
-    ${file.reference.antlr-2.7.7.jar}:\
-    ${file.reference.cdi-api-1.1.jar}:\
-    ${file.reference.classmate-1.3.0.jar}:\
-    ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.el-api-2.2.jar}:\
-    ${file.reference.geronimo-jta_1.1_spec-1.1.1.jar}:\
-    ${file.reference.hibernate-commons-annotations-5.0.1.Final.jar}:\
-    ${file.reference.hibernate-core-5.2.2.Final.jar}:\
-    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
-    ${file.reference.jandex-2.0.0.Final.jar}:\
-    ${file.reference.javassist-3.20.0-GA.jar}:\
-    ${file.reference.javax.inject-1.jar}:\
-    ${file.reference.jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar}:\
-    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
-    ${file.reference.jsr250-api-1.0.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.primefaces-6.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
